--- a/src/public/css/news.css
+++ b/src/public/css/news.css
@@ -13,7 +13,9 @@
 .news-block {
   display: flex;
   align-items: center;
-  margin: 36px 0; }
+  margin: 36px 0;
+  text-decoration: none;
+  color: var(--primary-color); }
 
 .news-block__img {
   width: 100%;
