--- a/src/resources/scss/news.scss
+++ b/src/resources/scss/news.scss
@@ -17,6 +17,8 @@
   display: flex;
   align-items: center;
   margin: 36px 0;
+  text-decoration: none;
+  color: var(--primary-color);
 }
 
 .news-block__img {
