--- a/src/resources/scss/userManager.scss
+++ b/src/resources/scss/userManager.scss
@@ -178,12 +178,18 @@
   font-weight: 700;
 }
 
+#classify,
 .form-control {
   width: 100%;
   padding: 12px;
   outline: none;
   border: none;
   border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 1.6rem;
+}
+#classify {
+  cursor: pointer;
 }
 
 .view-post {
