--- a/src/resources/views/admin/handleUser.hbs
+++ b/src/resources/views/admin/handleUser.hbs
@@ -14,6 +14,31 @@
                     <label for="">Tên tiêu đề</label>
                     <input type="text" name="name" placeholder="name" class="form-control">
                 </div>
+
+                <div class="form-group">
+                    <label for="">Phân loại</label>
+                    <select name="classify" id="classify">
+                        <optgroup label="1. TRANG CHỦ">
+                            <option value="1">Tin nổi bật</option>
+                            <optgroup label="Laptop chơi game">
+                                <option value="21">Laptop chơi game(Slide trên)</option>
+                                <option value="22">Laptop chơi game(Slide dưới)</option>
+                            </optgroup>
+                            <optgroup label="Laptop văn phòng">
+                                <option value="31">Laptop văn phòng(Slide trên)</option>
+                                <option value="32">Laptop văn phòng(Slide dưới)</option>
+                            </optgroup>
+                            <optgroup label="Laptop mỏng nhẹ thời trang">
+                                <option value="41">Laptop mỏng nhẹ thời trang(Slide trên)</option>
+                                <option value="42">Laptop mỏng nhẹ thời trang(Slide dưới)</option>
+                            </optgroup>
+                        </optgroup>
+
+                        <optgroup label="2. TIN TỨC">
+                            <option value="5">Tin tức</option>
+                        </optgroup>
+                    </select>
+                </div>
                 
                 <textarea name="description" id="description" rows="10" cols="80"></textarea>
                 
