--- a/src/public/css/base.css
+++ b/src/public/css/base.css
@@ -16,7 +16,8 @@ html {
   font-size: 62.5%;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 1px;
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+  overflow-y: auto; }
 
 /* css scroll bar */
 ::-webkit-scrollbar-track {
