--- a/src/resources/scss/base.scss
+++ b/src/resources/scss/base.scss
@@ -19,6 +19,7 @@ html {
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 1px;
   scroll-behavior: smooth;
+  overflow-y: auto;
 }
 
 /* css scroll bar */
