--- a/src/resources/views/partials/headerAdmin.hbs
+++ b/src/resources/views/partials/headerAdmin.hbs
@@ -46,23 +46,10 @@
       </li>
 
       <li class="admin-category__item">
-        <div class="admin-category__link js-admin-category__link">
+        <a href="/homeAdmin/handleUser" class="admin-category__link js-admin-category__link js-active-category">
           <i class="fas fa-cookie-bite"></i>
           <p class="only-category">Quản lý giao diện user</p>
-          <i class="icon__arrow-left fas fa-chevron-left"></i>
-        </div>
-        <ul class="sub-menu__list">
-          <a href="/homeAdmin/handleUser"class="js-active-category">
-            <li class="sub-menu__item">
-              <i class="icon-circle fas fa-circle-notch"></i>
-              <p class="only-category">CRUD slideHome</p>
-            </li>
-          </a>
-          <li class="sub-menu__item">
-            <i class="icon-circle fas fa-circle-notch"></i>
-            <p class="only-category">Bình luận admin</p>
-          </li>
-        </ul>
+        </a>
       </li>
     </ul>
   </div>
