--- a/src/resources/views/admin/managerPost.hbs
+++ b/src/resources/views/admin/managerPost.hbs
@@ -2,26 +2,8 @@
     <div class="form-user">
         <h1>Danh sách bài viết</h1>
         <div class="form__CRUD">
-            <div>
-                <div class="print-output-file">
-                    <span>
-                        <i class="fas fa-file-excel"></i>
-                        Xuất excel
-                    </span>
-                </div>
-                <div class="print-output-file">
-                    <span>
-                        <i class="fas fa-print"></i>
-                        In
-                    </span>
-
-                </div>
-                <div class="print-output-file">
-                    <span>
-                        <i class="fas fa-file-pdf"></i>
-                        Xuất Pdf
-                    </span>
-                </div>
+            <div class="form-user__heading">
+                <a href="/homeAdmin/trashManagerPost">Thùng rác ({{deleteblogs}}) </a>
             </div>
             <div>
                 <span>Search</span>
@@ -31,9 +13,12 @@
 
         <table style="width: 100%;" border="0">
             <thead>
-                <th style="10%;">#</th>
+                <th style="10%;"></th>
                 <th style="15%;">Ảnh bài viết</th>
-                <th style="30%;">Họ và tên</th>
+                <th style="30%;">
+                    Họ và tên
+                    {{{sortable 'username' _sort}}}
+                </th>
                 <th>Chức năng</th>
             </thead>
             <tbody>
@@ -51,12 +36,18 @@
                             <i class="fas fa-edit"></i>
                             <span>sửa</span>
                         </a>
-                        <form action="/homeAdmin/{{this._id}}/posts?_method=DELETE" method="post" style="display: inline-block; position: relative; top:0px" class="btn btn-delete">
+                        <form action="/homeAdmin/{{this._id}}?_method=DELETE" method="post" style="display: inline-block; position: relative; top:0px" class="btn btn-delete">
                             <button style="background-color: transparent; border: none; color: var(--white-color);font-size: 1.6rem;font-weight: 600; cursor: pointer;width: 100%; height: 25px;">
                                 <i class="fas fa-trash-alt"></i>
                                 <span>xóa</span>
                             </button>
                         </form>
+                    </th>
+                </tr>
+                {{else}}
+                 <tr>
+                    <th colspan="5" style="border-bottom: 1px solid #fff;">
+                        chưa có bài viết nào.
                     </th>
                 </tr>
                 {{/each}}
