--- a/src/resources/views/admin/userManager.hbs
+++ b/src/resources/views/admin/userManager.hbs
@@ -7,26 +7,8 @@
     <div  class="form-user">
         <span>Thông tin cá nhân</span>
         <div class="form__CRUD">
-            <div>
-                <div class="print-output-file">
-                    <span>
-                        <i class="fas fa-file-excel"></i>
-                        Xuất excel
-                    </span>
-                </div>
-                <div class="print-output-file">
-                    <span>
-                        <i class="fas fa-print"></i>
-                        In
-                    </span>
-
-                </div>
-                <div class="print-output-file">
-                    <span>
-                        <i class="fas fa-file-pdf"></i>
-                        Xuất Pdf
-                    </span>
-                </div>
+            <div class="form-user__heading">
+                <a href="/homeAdmin/trashUsermanager">Thùng rác ({{deleteusers}}) </a>
             </div>
             <div>
                 <span>Search</span>
@@ -36,11 +18,18 @@
 
         <table style="width: 100%;">
             <thead>
-                <th style="width: 8%;">#</th>
-                <th style="width: 14%;">Họ và tên</th>
-                <th style="width: 14%;">Tài khoản</th>
+                <th style="width: 8%;"></th>
+                <th style="width: 20%;">
+                    Họ và tên
+                    {{{sortable 'fullname' _sort}}}
+                </th>
+                <th style="width: 14%;">
+                    Tài khoản
+                    {{{sortable 'username' _sort}}}
+                </th>
                 <th style="width: 8%;">
                     Email
+                    {{{sortable 'email' _sort}}}
                 </th>
                 <th>Chức năng</th>
             </thead>
@@ -60,14 +49,19 @@
                             <i class="fas fa-edit"></i>
                             <span>Sửa</span>
                         </a>
-                        <form action="/homeAdmin/{{this._id}}/user?_method=DELETE" method="post" style="display: inline-block;">
-                            <button class="btn-delete btn">
+                         <form action="/homeAdmin/{{this._id}}?_method=DELETE" method="post" style="display: inline-block; position: relative; top:0px" class="btn btn-delete">
+                            <button style="background-color: transparent; border: none; color: var(--white-color);font-size: 1.6rem;font-weight: 600; cursor: pointer;width: 100%; height: 25px;">
                                 <i class="fas fa-trash-alt"></i>
-                                <span>Xóa</span>
+                                <span>xóa</span>
                             </button>
                         </form>
                     </th>
-                    
+                </tr>
+                {{else}}
+                 <tr>
+                    <th colspan="5" style="border-bottom: 1px solid var(--white-color);">
+                        Bạn chưa có Người dùng nào.
+                    </th>
                 </tr>
                 {{/each}}
             </tbody>
