--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -47,6 +47,7 @@
         </footer>
     </div>
 
+    {{!-- <script src="/js/sendmail.js"></script> --}}
     <script type="module" src="/js/index.js"></script>
 </body>
 </html>
